tests/ui/cast_targets/sqlite/fail/postgres_marker_in_sqlite.stderr
error[E0277]: the trait bound `Int4: CastTarget<'_, drizzle::sqlite::types::Integer, SQLiteDialect>` is not satisfied
  --> tests/ui/cast_targets/sqlite/fail/postgres_marker_in_sqlite.rs:13:69
   |
13 |     let _ = cast::<_, _, drizzle::sqlite::types::Integer>(user.age, drizzle_types::postgres::types::Int4);
   |             ---------------------------------------------           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `CastTarget<'_, drizzle::sqlite::types::Integer, SQLiteDialect>` is not implemented for `Int4`
   |             |
   |             required by a bound introduced by this call
   |
help: the trait `CastTarget<'a, T, D>` is implemented for `&'a str`
  --> core/src/expr/util.rs
   |
   | impl<'a, T: DataType, D> CastTarget<'a, T, D> for &'a str {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `drizzle::core::expr::cast`
  --> core/src/expr/util.rs
   |
   | pub fn cast<'a, V, E, Target>(
   |        ---- required by a bound in this function
   |     expr: E,
   |     target_type: impl CastTarget<'a, Target, V::DialectMarker>,
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `cast`
